--- a/src/styles/scss/modules/_certifications.scss
+++ b/src/styles/scss/modules/_certifications.scss
@@ -1,9 +1,13 @@
 .section-container{
+    display: flex;
+    flex-direction: column;
+
     .subtitle{
         margin: 25px;
     }   
 
     .certification-container{
+        color: $dark-blue;
         margin: 15px;
         display: grid;
         grid-template-columns: repeat(2, 1fr) ;
@@ -11,13 +15,20 @@
         row-gap: 15px;
         
         .certification-card{
-            border: $test;
+            border: $card-border;
             height: 100px;
-
+            width: 100%;
+            padding: 25px 15px;
             display: flex;
             justify-content: center;
             align-items: center;
             text-align: center;
+
+
+            a{
+                text-decoration: none;
+                color: $dark-blue;
+            }
         }
         
     }
