--- a/src/styles/scss/modules/_nav.scss
+++ b/src/styles/scss/modules/_nav.scss
@@ -5,7 +5,7 @@
         width: 100%;
         background-color: $dark-blue;
         color: $burnt-yellow;
-        height: 40px;
+        height: 2.5rem;
         
         .nav{
             
@@ -21,7 +21,7 @@
                 .home-button{
                     width: 50%;
                     height: 100%;
-                    padding: 15px;
+                    padding: 0.5rem 1rem;
                     
                     a{
                         text-decoration: none;
