--- a/src/styles/scss/modules/_skills.scss
+++ b/src/styles/scss/modules/_skills.scss
@@ -13,17 +13,24 @@
     display: flex;
     flex-direction: column;
     margin: 20px 0;
+    background-color: $dark-blue;
+    color: $burnt-yellow;
+    width: 100%;
 
     .skill-container-list{
         display: flex;
         flex-direction: row;
+        width: 400px;
         
         .card{
-            margin: 20px 10px;
-            width: 50%;
-            border: 0.5px solid $dark-blue;
+            margin: 20px 15px 0px;
+            width: 100%;
+            border: 0.5px solid $burnt-yellow;
             border-radius: 5px;
-            padding: 20px 10px;
+            padding: 20px;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
 
             .skills-title{
                 font-weight: 700;
@@ -40,7 +47,11 @@
         }
     }
     .p-container{
-        margin: 0px 25px 10px;
-        line-height: 1.5rem;
+        display: flex;
+        width: 270px;
+        justify-content: center;
+        align-items: center;
+        margin: 0px 25px 45px;
+        line-height: 2rem;
     }
 }
