--- a/src/styles/scss/modules/_variables.scss
+++ b/src/styles/scss/modules/_variables.scss
@@ -16,3 +16,6 @@ $tablet-size: 768px;
 $desktop-size: 1280px;
 $desktop-medium-size: 1440px;
 $desktop-medium-size: 2160px;
+
+
+$card-border: 1px solid $dark-blue;
